# prioritize-public

./: .coverage  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 00187d30e01c_add_scheduler_tables.py  147061d798b0_add_study_sessions_table.py  2fade817afcb_add_user_timezone.py  3e588a47adb0_create_users_table.py  3f3c38b3adcf_create_events_table.py  728ce7c03e17_add_avatar_path_to_users.py  91c71b8c2fae_create_tasks_table.py  a3435daf0ab3_add_user_tier.py  f343aacb22ce_restore_schedules_table.py
scripts/: docker-entrypoint.sh
src/admin/: deps.py  main.py
src/event_service/: analytics.py  conftest.py  models.py  repository.py  routes.py  schemas.py  session.py  test_analytics.py
src/frontend/: auth.css  index.html  login.html  script.js  signup.html  styles.css
src/scheduler_service/: algorithm.py  api.py  calendar_api.py  calendar_export.py  models.py  schemas.py  service.py  test_alg.py
src/shared/: database.py
src/study_timer/: __init__.py  models.py  study_timer.py  study_timer_api.py
src/task_service/: api.py  auth_wrapper.py  models.py  schemas.py  service.py  user_client.py
src/user_service/: api.py  avatar.py  bridge.py  jwtoken.py  no_admin.py  schemas.py  test_api.py
src/user_service/models/: user.py
